[package]
authors = ["ehika"]
categories = ["command-line-utilities"]
description = "A command-line tool for string substitutions"
homepage = "https://github.com/HikaruEgashira/optool"
license = "MIT/Apache-2.0"
name = "optool"
readme = "README.md"
repository = "https://github.com/HikaruEgashira/optool"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "2"

[dev-dependencies]

[profile.release]
lto = true
codegen-units = 1
